修改配置文件中绝对路径为相对路径，对获取指定数组的最小因子算法进行更改调优

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 logging:
   config:
-    E:\学习资料\项目\demo\src\main\resources\logback.xml
+    classpath:logback.xml
   level:
     com.example.demo.dao: trace
 
